univention-portal (1.0.12-7) unstable; urgency=medium

  * Bug #44371: Improve handling of ports, query strings, fragments

 -- Alexander Kläser <klaeser@univention.de>  Tue, 08 Aug 2017 12:11:26 +0200

univention-portal (1.0.12-6) unstable; urgency=medium

  * Bug #44371: Add JavaScript unit tests

 -- Alexander Kläser <klaeser@univention.de>  Mon, 07 Aug 2017 18:06:33 +0200

univention-portal (1.0.12-5) unstable; urgency=medium

  * Bug #44371: Try to make portal links relative if server FQDN matches

 -- Alexander Kläser <klaeser@univention.de>  Mon, 07 Aug 2017 18:00:36 +0200

univention-portal (1.0.12-4) unstable; urgency=medium

  * Bug #44371: Rank all links of a portal entry and chose best match

 -- Alexander Kläser <klaeser@univention.de>  Mon, 07 Aug 2017 12:52:20 +0200

univention-portal (1.0.12-3) unstable; urgency=medium

  * Bug #44865: Add default portal entries on unjoined systems

 -- Florian Best <best@univention.de>  Tue, 27 Jun 2017 12:25:34 +0200

univention-portal (1.0.12-2) unstable; urgency=medium

  * Bug #44697: Allow to change the font color of the portal page

 -- Alexander Kläser <klaeser@univention.de>  Fri, 26 May 2017 13:31:24 +0200

univention-portal (1.0.12-1) unstable; urgency=medium

  * Rename join script from 35univention-portal.inst to 33univention-
    portal.inst otherwise the self service portal entry can't be created
    (Bug #44212)

 -- Stefan Gohmann <gohmann@univention.de>  Sun, 02 Apr 2017 20:22:53 +0200

univention-portal (1.0.11-3) unstable; urgency=medium

  * Bug #44070: Fix representation of other image types than SVG

 -- Alexander Kläser <klaeser@univention.de>  Fri, 31 Mar 2017 01:47:51 +0200

univention-portal (1.0.11-2) unstable; urgency=medium

  * Bug #44096: fix type error

 -- Alexander Kläser <klaeser@univention.de>  Tue, 28 Mar 2017 14:58:02 +0200

univention-portal (1.0.11-1) unstable; urgency=medium

  * Bug #44097: fix html content of portal entry
